--- a/files/installing-the-backend/backend-config-files-v2/docker-compose.yaml
+++ b/files/installing-the-backend/backend-config-files-v2/docker-compose.yaml
@@ -58,7 +58,7 @@ services:
       retries: 5
 
   backend:
-    image: shs/backend:2.0
+    image: bluesquanium/shs-backend:latest
     restart: always
     depends_on:
       - supertokens
@@ -89,7 +89,7 @@ services:
       - app_network
 
   portal:
-    image: shs/web:2.0
+    image: bluesquanium/shs-web:latest
     restart: always
     depends_on:
       - backend
